--- a/infoBITS/css/dashboard.css
+++ b/infoBITS/css/dashboard.css
@@ -230,13 +230,22 @@ margin-top:2%;
 width:98%;
 margin-top:2%;
 }
-
-.cover_review_box .review {
+.cover_review_box table tr td div{
+	display: inline-block;
+}
+.cover_review_box table tr td .review {
 	overflow-y:scroll;
-	width:230px;
+	width:60%;
 	margin-left:1%;
 	height:150px;
 	text-align:justify;
+}
+.cover_review_box table tr td .brev-image {
+	margin-left:1%;
+	margin-top: -12%;
+	width:38%;
+	text-align:center;
+	vertical-align:top;
 }
 .coverinfo {
 	width:100%;
@@ -290,9 +299,9 @@ margin-top:2%;
 	position:relative;
 	border: 1px solid #ABABAB;
 	overflow:hidden;
-	float:left;
+	float:right;
 	background:#fff;
-	height:auto;
+	height:180px;
 	margin-bottom:1%;
 }
 .bannerCarouselWrapper1 .LibServices .services{
@@ -483,6 +492,15 @@ width: 90%;
 	width:77%;
 	margin-left:22%;
 	border: 1px solid #ABABAB;
+}
+.conversation .image .category{
+	background-color :#211D70;
+	color: #FFFFFF;
+	font-weight: bold;
+	padding: 2px;
+	border:none;
+	border-radius: 5px;
+	width: auto;
 }
 .admin-databList{
 	width:20%;
@@ -854,7 +872,7 @@ background-color:#FFFFFF}
 	cursor:pointer;
 }
 #comm{
-	height:10%;
+	height:15%;
 	width:100%;
 	font:Arial, Helvetica, sans-serif;
 	font-size:14px;
@@ -923,8 +941,150 @@ background-color:#FFFFFF}
 	height:auto;
 	margin-bottom:1%;
 }
+.dcomms .dshowCase .commOptions{
+	border: 2px solid #ABABAB;
+	background-color:#4a9ace;
+	float:left;
+	margin:1%;
+	padding:1%;
+	width: 25%;
+}
+.commOptions .commOption:hover{
+	background:#06588f;
+	color:#fff;
+}
+.commOptions .commOption{
+	border: 2px solid #ABABAB;
+	background-color:#fff;
+	margin: 1%;
+	padding: 1%;
+	font-size:14px;
+	color: #211d70;
+	font-weight:bold;
+	cursor:pointer;
+}
+.commOptions .activeComm{
+	background:#06588f;
+	color:#fff;
+}
 .msk .cData{
 overflow:hidden;
 height:100%;
 width:100%;
 }
+.conversation1 .image{
+	font-weight:bold;
+}
+.archive {
+	width: 37%;
+	display: block;
+	text-align: right;
+	position: absolute;
+	font-family: Arial, Helvetica, sans-serif;	
+	background:#000; 
+	opacity:0.8; 
+	height:auto;
+	padding:4px;
+	position:relative;
+	margin-top:-25px;
+	color:#FFFFFF;
+	font-weight:bold;	
+} 
+.bannerCarouselWrapper1 .one_search_box{
+	width:98%;
+	position:relative;
+	border: 1px solid #ABABAB;
+	overflow:hidden;
+	float:left;
+	background:#fff;
+	height:auto;
+	margin-bottom:1%;
+}
+.bannerCarouselWrapper1 .notice_scrolling {
+	width:98%;
+	position:relative;
+	border: 1px solid #ABABAB;
+	overflow:hidden;
+	float:right;
+	background:#fff;
+	height:auto;
+	margin-bottom:1%;
+}
+
+.button5{
+width:300px;
+height:70px;
+border:none;
+outline:none;
+box-shadow:-5px 5px 5px 0 #8aa7fb;
+color:#fff;
+font-size:30px;
+text-shadow:0 1px rgba(0,0,0,0.4);
+background-color:#5882FA;
+border-radius:3px;
+font-weight:700;
+}
+.button5:hover{
+background-color:#2E64FE;
+cursor:pointer;
+}
+.button5:active{
+box-shadow:none;
+}
+.btn{
+width:300px;
+height:70px;
+margin-left:20px;
+}
+/* jssor slider bullet navigator skin 01 css */
+        /*
+        .jssorb01 div           (normal)
+        .jssorb01 div:hover     (normal mouseover)
+        .jssorb01 .av           (active)
+        .jssorb01 .av:hover     (active mouseover)
+        .jssorb01 .dn           (mousedown)
+        */
+        .jssorb01 {
+            position: absolute;
+        }
+        .jssorb01 div, .jssorb01 div:hover, .jssorb01 .av {
+            position: absolute;
+            /* size of bullet elment */
+            width: 12px;
+            height: 12px;
+            filter: alpha(opacity=70);
+            opacity: .7;
+            overflow: hidden;
+            cursor: pointer;
+            border: #000 1px solid;
+        }
+        .jssorb01 div { background-color: gray; }
+        .jssorb01 div:hover, .jssorb01 .av:hover { background-color: #d3d3d3; }
+        .jssorb01 .av { background-color: #fff; }
+        .jssorb01 .dn, .jssorb01 .dn:hover { background-color: #555555; }
+
+        /* jssor slider arrow navigator skin 13 css */
+        /*
+        .jssora13l                  (normal)
+        .jssora13r                  (normal)
+        .jssora13l:hover            (normal mouseover)
+        .jssora13r:hover            (normal mouseover)
+        .jssora13l.jssora13ldn      (mousedown)
+        .jssora13r.jssora13rdn      (mousedown)
+        */
+        .jssora13l, .jssora13r {
+            display: block;
+            position: absolute;
+            /* size of arrow element */
+            width: 40px;
+            height: 50px;
+            cursor: pointer;
+            background: url('../images/a13.png') no-repeat;
+            overflow: hidden;
+        }
+        .jssora13l { background-position: -10px -35px; }
+        .jssora13r { background-position: -70px -35px; }
+        .jssora13l:hover { background-position: -130px -35px; }
+        .jssora13r:hover { background-position: -190px -35px; }
+        .jssora13l.jssora13ldn { background-position: -250px -35px; }
+        .jssora13r.jssora13rdn { background-position: -310px -35px; }
