--- a/infoBITS/css/menu.css
+++ b/infoBITS/css/menu.css
@@ -190,10 +190,11 @@ width:180px;
 		/* THE SUBMENUS */
 #cssmenu1 > ul ul {
 			position: absolute;
-			left: 25px;
+			left: -10%;
 			top: -9999px;
 			padding-left: 5px;
 			opacity: 0;
+			z-index: 5;
 			/* The fade effect, created using an opacity transition */
 			-webkit-transition: opacity .3s ease-in;
 			-moz-transition: opacity .3s ease-in;
@@ -203,10 +204,11 @@ width:180px;
 		}
 
 		/* Showing the submenu when the user is hovering the parent link */
-		#cssmenu1 > ul li:hover>ul {
+		#cssmenu1 ul li a:hover +  .servMenu{
 			top: 0px;
-			opacity: 1;
+			opacity: 0.8;
 		}
+		
 		
 			/**********************************************************************/
 			
@@ -222,7 +224,7 @@ width:180px;
 #cssmenu2 > ul {
 	display: block;
 	position: relative;
-	width: 120px;
+	width: auto;
     top: 3px;
     
 }
@@ -233,8 +235,8 @@ width:180px;
 		position: relative;
 		margin: 0;
 		padding: 0;
-    top: -3px;
-    left: -2px;
+    top: -4px;
+	right: -15px;
     height: 24px;
 }
 
@@ -246,7 +248,7 @@ width:180px;
 			margin: 0;
 			
 			padding: 5px 5px;
-			width: 120px;
+			width: 80%;
 
 			/* Typography */
 			font-family:  Helvetica, Arial, sans-serif;
@@ -277,10 +279,11 @@ width:180px;
 		/* THE SUBMENUS */
 #cssmenu2 > ul ul {
 			position: absolute;
-			left: -372px;
+			left: -192%;
 			top: -9990px;
 			padding-left: 5px;
 			opacity: 0;
+			z-index: 5;
 			/* The fade effect, created using an opacity transition */
 			-webkit-transition: opacity .3s ease-in;
 			-moz-transition: opacity .3s ease-in;
@@ -290,9 +293,9 @@ width:180px;
 		}
 
 		/* Showing the submenu when the user is hovering the parent link */
-		#cssmenu2 > ul li:hover>ul {
+		#cssmenu2 ul li a:hover + .resMenu{
 			top: 0px;
-			opacity: 1;
+			opacity: 0.8;
 		}
 		
 			/**********************************************************************/
