--- a/infoBITS/css/main.css
+++ b/infoBITS/css/main.css
@@ -1566,6 +1566,7 @@ cursor:pointer;
 	margin-right:2%;
 	display:inline-block;
 	position:relative;
+	height: 25px;
 }
 .newConv{
 	width:100%;
@@ -1714,7 +1715,9 @@ padding:4px;
 #replacer{
 	max-width:70%;
 	margin-left:2%;
-	display:none;
+}
+.showCase #Reply #replacer{
+	margin-left:10px;
 }
 #replacer option{
 	overflow:hidden;
@@ -1737,6 +1740,9 @@ padding:4px;
 	font:Arial, Helvetica, sans-serif;
 	font-size:14px;
 	color:#211d70;
+}
+.commlist .talk{
+	margin-bottom: 100px;
 }
 .communications li, .dcommunications li, .talk li{
 	width:98%;
@@ -1775,8 +1781,7 @@ padding:4px;
 	cursor:pointer;
 }
 #comm{
-	display:none;
-    margin:1%;
+    margin:8px;
     -webkit-border-radius:4px;
     -moz-border-radius:4px;
     border-radius:4px; 
@@ -1786,6 +1791,22 @@ padding:4px;
 #commSend{
 	margin-left: 2%;
 	margin-bottom: 2%;
+}
+.commlist #Reply{
+	z-index:90;
+	position: absolute;
+	top:238px;
+	left:175px;
+	width: 365px;
+	border-top: thick solid #4a9ace;
+	background: #eee;
+}
+.showCase #Reply{
+	position: relative;
+	margin:10px;
+	width: 80%;
+	border-top: thick solid #4a9ace;
+	background: #eee;
 }
 .tableEdit{
 	display:block;
